# forge-CLI

./: .gitignore  Cargo.toml  README.md  opencode.json
.opencode-agents/core/: hermes.md
.opencode-agents/subagents/documentation/: commenter.md  documenter.md
.opencode-agents/subagents/implementation/: coder.md  editor.md  fixer.md  refactorer.md
.opencode-agents/subagents/infrastructure/: devops.md  optimizer.md
.opencode-agents/subagents/planning/: architect.md  planner.md
.opencode-agents/subagents/quality/: debugger.md  reviewer.md  security.md  tester.md
.opencode-agents/subagents/research/: analyst.md  finder.md  researcher.md
codex-rs/tools/src/: tool_discovery.rs
codex-rs/tui/src/: chatwidget.rs
codex-rs/tui/src/chatwidget/: interrupts.rs
src/: commands.rs  composer.rs  learning.rs  lib.rs  main.rs  terminal_ui.rs
tests/: plain_repl_smoke.rs  tui_pty.rs
tests/support/: mod.rs  tui_pty.rs
