[package]
name = "forge-cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Interactive harness for external coding agents (opencode, claude, etc.)"
repository = "https://github.com/mrmoe28/forge-CLI"

[[bin]]
name = "forge"
path = "src/main.rs"

[lib]
doctest = false
name = "forge_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["bracketed-paste"] }
csv = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
toml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }

# Used only by run_agent_streaming's graceful-cancel path to send SIGTERM
# before falling back to SIGKILL. Unix-only because Windows lacks SIGTERM
# semantics; the cancel path there short-circuits straight to kill().
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
# PTY automation harness for tests/tui_pty.rs. portable-pty is the same
# cross-platform PTY layer wezterm uses; vt100 parses the resulting ANSI
# byte stream into a logical screen we can grep deterministically.
[target.'cfg(unix)'.dev-dependencies]
portable-pty = "0.8"
vt100 = "0.15"
